--- a/client/.travis.yml
+++ b/client/.travis.yml
@@ -1,5 +1,6 @@
-sudo:required
+sudo: required
 language: generic
+
 services:
   - docker
 
@@ -7,7 +8,7 @@ before_install:
   - docker build -t deeptiranjanpalo/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true deeptiranjanpalo/react-test npm test -- --coverage
+  - docker run -e CI=true deeptiranjanpalo/react-test npm run test -- --coverage
 
 after_success:
   - docker build -t deeptiranjanpalo/multi-client ./client
@@ -15,13 +16,13 @@ after_success:
   - docker build -t deeptiranjanpalo/multi-server ./server
   - docker build -t deeptiranjanpalo/multi-worker ./worker
 
-  # Log in to the docker CLI.
+
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
-  # Take those images and push them to docker hub.
+
   - docker push deeptiranjanpalo/multi-client
   - docker push deeptiranjanpalo/multi-nginx
   - docker push deeptiranjanpalo/multi-server
   - docker push deeptiranjanpalo/multi-worker
+      
 
-  
