--- a/client/.travis.yml
+++ b/client/.travis.yml
@@ -1,6 +1,5 @@
-sudo: required
 language: generic
-
+sudo: required
 services:
   - docker
 
@@ -8,21 +7,18 @@ before_install:
   - docker build -t deeptiranjanpalo/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true deeptiranjanpalo/react-test npm run test -- --coverage
+  - docker run -e CI=true deeptiranjanpalo/react-test npm test -- --coverage
 
 after_success:
   - docker build -t deeptiranjanpalo/multi-client ./client
   - docker build -t deeptiranjanpalo/multi-nginx ./nginx
   - docker build -t deeptiranjanpalo/multi-server ./server
   - docker build -t deeptiranjanpalo/multi-worker ./worker
-
-
+  #login to Docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-
-
+  # push these images to docker hub
   - docker push deeptiranjanpalo/multi-client
   - docker push deeptiranjanpalo/multi-nginx
   - docker push deeptiranjanpalo/multi-server
   - docker push deeptiranjanpalo/multi-worker
-      
 
